--- a/package.json
+++ b/package.json
@@ -2,8 +2,21 @@
   "name": "@interest-protocol/move-bytecode-template",
   "version": "0.0.1-alpha",
   "description": "WASM variant of the move-binary-format which allows bytecode templates",
-  "types": "move-bytecode-template.d.ts",
+  "types": "./move-bytecode-template.d.ts",
+  "main": "./mode-bytecode-template.js",
+  "type": "module",
+  "publishConfig": {
+    "access": "public"
+  },
+  "exports": {
+    ".": {
+      "source": "./mode-bytecode-template.js",
+      "require": "./mode-bytecode-template.js",
+      "types": "./mode-bytecode-template.d.ts"
+    }
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "packageManager": "npm@10.7.0+sha512.157ca5c98497363817c7797cd814fc45242f0a818843787c61d44518a36fa373effdb2ac70ae29756931fe89f04e91c3a86c3ea1e2dfe11c659fd595cb103195"
 }
